[package]
name = "prometheus-exposition-format-rs"
version = "0.1.0"
authors = ["Charly Molter <charly.molter@gmail.com>"]
edition = "2018"
license = "MIT"
keywords=["prometheus", "observability"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom="5.1.1"
[dev-dependencies]
assert_approx_eq = "1.1.0"
