[package]
name = "prometheus-exposition-format-rs"
version = "0.1.2"
authors = ["Charly Molter <charly.molter@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/lahabana/prometheus-exposition-format-rs"
description = "A parser for the prometheus exposition format using nom."
readme = "README.md"

keywords=["prometheus", "observability"]
[badges]
travis-ci = { repository = "lahabana/prometheus-exposition-format-rs"}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom="5.1.1"
[dev-dependencies]
assert_approx_eq = "1.1.0"
